# custom-op

./: CMakeLists.txt  MANIFEST.in  Makefile  build_pip_pkg.sh
cmake/: FindTF.cmake  FindTensorFlow.cmake
docker/: Dockerfile  docker-compose.yml
tensorflow_add2/: CMakeLists.txt
tensorflow_add2/cc/kernels/: add2_kernels.cc  add2_kernels.cc.old  add2_kernels.cc.old2
tensorflow_add2/cc/ops/: add2_ops.cc
tensorflow_add2/python/ops/: add2_ops.py  add2_ops_test.py
tensorflow_add_one/: CMakeLists.txt  __init__.py
tensorflow_add_one/cc/kernels/: add_one_kernels.cc
tensorflow_add_one/cc/ops/: add_one_ops.cc
tensorflow_add_one/python/ops/: add_one_ops.py  add_one_ops_test.py
tensorflow_complex2/: CMakeLists.txt
tensorflow_complex2/python/ops/: complex2_ops.py  complex2_ops_test.py
tensorflow_reverse_sequence2/: CMakeLists.txt
tensorflow_reverse_sequence2/cc/kernels/: reverse_sequence2_kernels.cc
tensorflow_reverse_sequence2/cc/ops/: reverse_sequence2_ops.cc
tensorflow_reverse_sequence2/python/ops/: reverse_sequence2_ops.py  reverse_sequence2_ops_test.py
tensorflow_time_two/: CMakeLists.txt
tensorflow_time_two/cc/kernels/: time_two_kernels.cc
tensorflow_time_two/python/ops/: time_two_ops_test.py
tensorflow_zero_out/: CMakeLists.txt
