PROJECT(add_one)

FILE(GLOB ${PROJECT_NAME}_KERNELS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cc/kernels/*.cc)
FILE(GLOB ${PROJECT_NAME}_OPS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cc/ops/*.cc)

ADD_LIBRARY(${PROJECT_NAME}_ops SHARED
  ${${PROJECT_NAME}_KERNELS_SOURCES}
  ${${PROJECT_NAME}_OPS_SOURCES}
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}_ops PUBLIC
  ${TF_INC}
  ${CMAKE_CURRENT_SOURCE_DIR}/cc/kernels/
  ${CMAKE_CURRENT_SOURCE_DIR}/cc/ops/
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_ops PUBLIC ${TF_LIB})

#TARGET_LINK_OPTIONS(${PROJECT_NAME}_ops PUBLIC ${PYTHON_TF_LFLAGS})
#TARGET_COMPILE_OPTIONS(${PROJECT_NAME}_ops PUBLIC ${PYTHON_TF_CFLAGS})

ADD_CUSTOM_TARGET(${PROJECT_NAME}_test
  COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/python/ops/${PROJECT_NAME}_ops_test.py
  DEPENDS ${PROJECT_NAME}_ops
  VERBATIM
)

SET_TARGET_PROPERTIES(${PROJECT_NAME}_ops PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python/ops
  PREFIX ""
  SUFFIX ".so"
  OUTPUT_NAME "_${PROJECT_NAME}_ops"
)
